#68 design: Fix Layout and NavBar spacing issue

--- a/components/MainNav/MainNav.module.scss
+++ b/components/MainNav/MainNav.module.scss
@@ -1,6 +1,6 @@
 .nav {
   border-bottom: 1px solid #ddd;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
