--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
+  padding: 2rem 0;
   .icon {
     position: absolute;
     &:hover {
