--- a/styles/muiOverride.scss
+++ b/styles/muiOverride.scss
@@ -1,4 +1,4 @@
-.MuiContainer-root {
+.MuiContainer-root.MuiContainer-maxWidthSm {
   padding-left: 0;
   padding-right: 0;
 }
